force-app/main/default/objects/User/fields/Annual_Accounting_Task_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Annual_Accounting_Task_Reminder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Annual Accounting Task Reminder</label>
    <type>Checkbox</type>
</CustomField>