force-app/main/default/objects/User/fields/Can_Activate_or_Close_a_Trust__c.field-meta.xml
<CustomField>
    <fullName>Can_Activate_or_Close_a_Trust__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Activate or Close a Trust</label>
    <type>Checkbox</type>
</CustomField>