force-app/main/default/objects/User/fields/Can_Approve_Documents__c.field-meta.xml
<CustomField>
    <fullName>Can_Approve_Documents__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box for Users who can Approve Documents</inlineHelpText>
    <label>Can Approve Documents</label>
    <type>Checkbox</type>
</CustomField>