force-app/main/default/objects/User/fields/Can_Approve_Time_Entries__c.field-meta.xml
<CustomField>
    <fullName>Can_Approve_Time_Entries__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Approve Time Entries</label>
    <type>Checkbox</type>
</CustomField>