force-app/main/default/objects/User/fields/Can_Approve_Trusts__c.field-meta.xml
<CustomField>
    <fullName>Can_Approve_Trusts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Approve Trusts</label>
    <type>Checkbox</type>
</CustomField>