force-app/main/default/objects/User/fields/Can_Create_Invoices__c.field-meta.xml
<CustomField>
    <fullName>Can_Create_Invoices__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Create Invoices</label>
    <type>Checkbox</type>
</CustomField>