force-app/main/default/objects/User/fields/Case_Manager_ID__c.field-meta.xml
<CustomField>
    <fullName>Case_Manager_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Case Manager ID</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>