force-app/main/default/objects/User/fields/Initials__c.field-meta.xml
<CustomField>
    <fullName>Initials__c</fullName>
    <formula>LEFT( FirstName , 1)  &amp; &apos;.&apos;  &amp;  LEFT( LastName  , 1) &amp; &apos;.&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Initials</label>
    <type>Text</type>
</CustomField>