force-app/main/default/objects/User/fields/Pdf_Signature__c.field-meta.xml
<CustomField>
    <fullName>Pdf_Signature__c</fullName>
    <label>Pdf Signature</label>
    <length>255</length>
    <type>Text</type>
</CustomField>