force-app/main/default/objects/User/fields/Receive_Email_Notification_of_New_Task__c.field-meta.xml
<CustomField>
    <fullName>Receive_Email_Notification_of_New_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Receive Email Notification of New Task</label>
    <type>Checkbox</type>
</CustomField>