force-app/main/default/objects/User/fields/SW_ID__c.field-meta.xml
<CustomField>
    <fullName>SW_ID__c</fullName>
    <description>SW ID associated with Webster Bank</description>
    <label>SW ID</label>
    <length>4</length>
    <type>Text</type>
</CustomField>