force-app/main/default/objects/User/fields/X18_Character_SF_User_ID__c.field-meta.xml
<CustomField>
    <fullName>X18_Character_SF_User_ID__c</fullName>
    <formula>CaseSafeId(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>18 Character SF User ID</label>
    <type>Text</type>
</CustomField>